objects/Grade_Scale_Catalog_Scale__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_Catalog__c</fullName>
        <label>Grade Scale Catalog</label>
        <referenceTo>Grade_Scale_Catalog__c</referenceTo>
        <relationshipLabel>Grade Scale Catalog/Scales</relationshipLabel>
        <relationshipName>Grade_Scale_Catalog_Scales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grade Scale</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Grade Scale Catalog/Scales</relationshipLabel>
        <relationshipName>Grade_Scale_Catalog_Scales</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Grade Scale Catalog/Scale</label>
    <nameField>
        <displayFormat>GSC-{000000}</displayFormat>
        <label>Grade Scale Catalog/Scale Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grade Scale Catalog/Scales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>